namespace BE_API.Dto.Account
{
    public class LoginDto
    {
        public string Email { get; set; }
        public string Password { get; set; }
        public string? DeviceToken { get; set; }
    }
}
