namespace BE_API.Dto.Account
{
    public class LoginReponseDto
    {
        public string Token { get; set; }
    }
}
